# chorus-api

./: CHANGES.txt  LICENSE  README.md  gen_doc.sh  install_env.sh  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/scripts/: release.py
.github/workflows/: publish.yml
chorusapi/: client.py
chorusapi/constants/: api_constant.py  etat_courant_flux.py  syntax_flux_constant.py
chorusapi/exceptions/: exception.py
chorusapi/models/: api.py  factures.py  structures.py  transverses.py
chorusapi/responses/: api_response.py
chorusapi/utils/: chorus_utils.py
docs/chorusapi/: client.html
docs/chorusapi/exceptions/: index.html
docs/chorusapi/models/: api.html  structures.html
docs/chorusapi/responses/: api_response.html  index.html
docs/constants/: etat_courant_flux.html  index.html  syntax_flux_constant.html
docs/exceptions/: exception.html
docs/models/: factures.html  index.html  structures.html  transverses.html
exemples/: deposer_facture.py  env.py  get_token.py  recherche_structure.py  status_depot.py
exemples/utils/: etat_courant_flux.py  print_dict.py
html/chorusapi/: index.html
html/chorusapi/constants/: api_constant.html  index.html  syntax_flux_constant.html
html/chorusapi/models/: factures.html
html/chorusapi/utils/: chorus_utils.html  index.html
