[metadata]
name = chorus-api
version = 1.0.0
author = Joel ONIPOH
author_email = technique@cinego.net
description = Chorus API Package https://piste.gouv.fr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cnfilms/chorus-api
keywords = python, chorus, api, piste, chorus piste
project_urls =
    Bug Tracker = https://github.com/cnfilms/chorus-api/issues
    Changelog = https://github.com/cnfilms/chorus-api/releases
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
python_requires = >=2.7

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
